--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dreamtalk
 spring.datasource.username=postgres
 spring.datasource.password=0000
 spring.jpa.hibernate.ddl-auto=create
+
+spring.liquibase.change-log=classpath:db/migration/changelog-master.xml
+spring.liquibase.url=jdbc:postgresql://localhost:5432/dreamtalk
+spring.liquibase.user=postgres
+spring.liquibase.password=0000
