--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dreamtalk
 spring.datasource.username=postgres
 spring.datasource.password=0000
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.liquibase.change-log=classpath:db/migration/changelog-master.xml
 spring.liquibase.url=jdbc:postgresql://localhost:5432/dreamtalk
