--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "antd": "^4.15.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "react": "^17.0.2",
