Added jwt authentiaction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.liquibase.change-log=classpath:db/migration/changelog-master.xml
 spring.liquibase.url=jdbc:postgresql://localhost:5432/dreamtalk
 spring.liquibase.user=postgres
 spring.liquibase.password=0000
+
+jwt.header=Authorization
+jwt.expired=900000
+jwt.secret=hdsfYhdNAdhgYSqqwafdfriinN
