--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack -o ./dist",
-    "start": "webpack serve --config-name dev.config",
+    "start": "webpack serve --config ./webpack.dev.config.js",
     "build": "webpack --config ./webpack.prod.config.js"
   },
   "devDependencies": {
