Add refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dreamtalk
 spring.datasource.username=postgres
 spring.datasource.password=0000
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 spring.liquibase.change-log=classpath:db/migration/changelog-master.xml
 spring.liquibase.url=jdbc:postgresql://localhost:5432/dreamtalk
@@ -11,3 +11,4 @@ spring.liquibase.password=0000
 jwt.header=Authorization
 jwt.expired=900000
 jwt.secret=hdsfYhdNAdhgYSqqwafdfriinN
+jwt.refresh.validity=31536000000
