--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "antd": "^4.15.6",
+    "antd-img-crop": "^3.14.1",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "react": "^17.0.2",
